[package]
license = "MIT"
edition = "2021"
version = "0.1.0"
name = "lil-redis"
readme = "README.md"
homepage = "https://github.com/m1guelpf/lil-redis"
repository = "https://github.com/m1guelpf/lil-redis"
authors = ["Miguel Piedrafita <soy@miguelpiedrafita.com>"]
description = "An intentionally-limited Rust implementation of the Redis server."

[dependencies]
anyhow = "1.0.59"
tokio = { version = "1.23.0", features = ["full"] }
